Implemented signup and login page

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/priyanshumaurya007/e-commerce-backend#readme",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.19.2",
     "faker": "^6.6.6",
     "jsonwebtoken": "^9.0.2",
